[package]
name = "futures-delay-queue"
version = "0.1.0"
authors = ["spebern sp33cht@gmail.com"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/spebern/futures-delay-queue"
documentation = "https://docs.rs/futures-delay-queue"
description = "Async delay queue backed by async-std and futures-timer"
keywords = ["async", "await", "future", "delay", "queue"]
categories = ["asynchronous", "concurrency", "network-programming"]
readme = "README.md"

[dependencies]
async-std = { version = "1.3.0", features = ["unstable"] }
futures-timer = "2.0.2"
pin-project-lite = "0.1.1"

[dev-dependencies]
async-std = { version = "1.3.0", features = ["unstable", "attributes"] }
