[package]
name = "futures-delay-queue"
version = "0.4.2"
authors = ["spebern sp33cht@gmail.com"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/spebern/futures-delay-queue"
documentation = "https://docs.rs/futures-delay-queue"
description = "Async delay queue backed by async-std and futures-timer"
keywords = ["async", "await", "future", "delay", "queue"]
categories = ["asynchronous", "concurrency", "network-programming"]
readme = "README.md"

[features]
use-tokio = ["tokio"]
use-async-std = ["async-std"]
default = ["use-async-std"]

[dependencies]
async-std = { version = "1", optional = true }
tokio = { version = "1.4", optional = true }
futures-timer = "3"
pin-project-lite = "0.2"
futures-intrusive = "0.4"
parking_lot = "0.11"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
